# svn2git

./: .markdownlint.yaml  CHANGELOG.md  Cargo.toml  README.md  markdown-link-check.json
.github/workflows/: ci.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/documentation/: cli.md  conv-params.md  index.md
book/src/tutorial/: 01-prepare-svn-repo.md  02-configure-conv.md  03-run-conv.md  index.md
ci/: build-and-test.sh  build-dist-book.sh  build-dist-linux.sh  build-dist-windows.sh  clippy.sh  extract-changelog.sh  get-release-version.sh  lint-aux.sh  package-crate.sh  publish-crate.sh
convert-tests/: defs.rs  main.rs  test.rs
convert-tests/tests/: copy-root.yaml  delete-files-branched.yaml  delete-files-unbranched.yaml  dot-git-branched.yaml  dot-git-unbranched.yaml  dot-svn-branched.yaml  dot-svn-unbranched.yaml  git-repack.yaml  symlink.yaml
convert-tests/tests/branches/: branched-discard-unbranched.yaml  branched-unbranched.yaml  copy-nonbranch-to-one.yaml  copy-nonbranch-to-parent.yaml  copy-one-to-nonbranch.yaml  copy-one.yaml  copy-parent-to-nonbranch.yaml  copy-parent.yaml  copy-replace-parent.yaml  create-partial-2.yaml  create-partial-copy-parent.yaml  create-partial.yaml  delete-keep.yaml  delete-not-keep.yaml  delete-twice.yaml  files-in-branch-parent.yaml  merge-after-cherrypick.yaml  merge-allowed-gap.yaml  merge-and-keep.yaml  merge-and-revert-keep.yaml  merge-and-revert-not-keep.yaml  merge-during-create.yaml  merge-from-partial.yaml  merge-from-to-partial-1.yaml  merge-on-creation.yaml  merge-simple-ignore.yaml  merge-simple.yaml  merge-to-partial.yaml  merge-twice.yaml  merge-unrelated-on-creation.yaml  merge-unrelated.yaml  merge-with-cherrypick.yaml  not-merge-gap.yaml  recover-one.yaml  recover-parent.yaml  recreate-with-delete-add.yaml  recreate-with-replace.yaml  recreate.yaml  rename.yaml  unbranched-custom.yaml
convert-tests/tests/commit-meta/: crlf.yaml  custom.yaml  default.yaml
convert-tests/tests/dump-sources/: compressed-bzip2.yaml  compressed-gzip.yaml  compressed-lz4.yaml  compressed-xz.yaml  compressed-zstd.yaml  uncompressed.yaml
convert-tests/tests/fail/: change-non-existing-file.yaml  copy-file-as-dir.yaml  copy-from-non-existing-path.yaml  copy-from-non-existing-rev.yaml  delete-non-existing-file.yaml  delete-with-copy-from.yaml  delete-with-text.yaml  deleted-head.yaml  invalid-head-branched.yaml  invalid-head-unbranched.yaml  invalid-sync-from-uuid.yaml  invalid-uuid.yaml  missing-file-add-text.yaml  missing-file-replace-text.yaml  non-monotonic-rev-no.yaml  repeated-rev-no copy.yaml  replace-non-existing-file.yaml  tag-head.yaml
convert-tests/tests/head/: custom-branch.yaml  default.yaml  deleted-keep.yaml  explicit-trunk.yaml  unbranched-custom.yaml  unbranched.yaml
convert-tests/tests/ignore/: branched.yaml  disabled-branched.yaml  disabled-unbranched.yaml  unbranched.yaml
convert-tests/tests/ops-branched/: basic.yaml  change-file-exec.yaml  copy-dir.yaml  copy-file.yaml  copy-modify-file.yaml  copy-replace-file.yaml  copy-replace-modify-file.yaml  delete-dir.yaml  delete-file.yaml  file-to-symlink.yaml  modify-file.yaml  replace-file.yaml  unknown-svn-special.yaml
convert-tests/tests/ops-unbranched/: basic.yaml  change-file-exec.yaml  copy-dir.yaml  copy-file.yaml  copy-modify-file.yaml  copy-replace-file.yaml  copy-replace-modify-file.yaml  delete-dir.yaml  delete-file.yaml  file-to-symlink.yaml  modify-file.yaml  replace-file.yaml  unknown-svn-special.yaml
convert-tests/tests/prop-delta/: change-file-exec.yaml  change-file-symlink.yaml  ignore-branched.yaml  ignore-unbranched.yaml  merge-and-keep.yaml  merge-and-revert-keep.yaml  merge-and-revert-not-keep.yaml
convert-tests/tests/tags/: branch-from-tag.yaml  crlf-meta.yaml  custom-meta.yaml  default-meta.yaml  from-branch-with-changes.yaml  from-branch.yaml  from-empty.yaml  from-tag.yaml  modify.yaml  rename.yaml
convert-tests/tests/text-delta/: copy-modify-file.yaml  copy-replace-modify-file.yaml  fake-symlink-to-symlink.yaml  modify-file.yaml  modify-symlink.yaml  symlink-to-fake-symlink.yaml
src/: cli.rs  main.rs  make_meta.rs  params_file.rs  path_pattern.rs  pipe.rs  term_out.rs  user_map.rs
src/convert/: bin_ser_de.rs  git_wrap.rs  meta.rs  mod.rs  options.rs  stage1.rs  stage2.rs  svn_tree.rs  tree_builder.rs
src/git/: delta.rs  mod.rs
src/git/import/: change_set.rs  mod.rs  obj_map.rs  temp_storage.rs  temp_storage_thread.rs  tree_builder.rs
src/svn/: diff.rs  dump.rs  mod.rs  source.rs
