[package]
name = "svn2git"
version = "0.4.0"
authors = ["Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>"]
edition = "2024"
rust-version = "1.85"
description = "A Subversion-to-Git repository converter"
repository = "https://github.com/eduardosm/svn2git"
license = "MIT OR Apache-2.0"
keywords = ["converter", "git", "repository", "subversion", "svn"]
categories = ["development-tools"]
exclude = ["/.github", "/book", "/ci", ".gitignore"]
publish = true

[[test]]
name = "convert"
path = "convert-tests/main.rs"
harness = false

[dependencies]
bzip2 = { version = "0.6.1", features = ["static"] }
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
cyclic-poly-23 = "0.4.0"
flate2 = "1.1.8"
foldhash = "0.2.0"
gix-actor = "0.38.0"
gix-date = "0.13.0"
gix-features = "0.46.0"
gix-hash = "0.22.0"
gix-object = "0.55.0"
gix-pack = "0.65.0"
indoc = "2.0.7"
liblzma = { version = "0.4.5", features = ["static"] }
lru-mem = "0.3.0"
lz4_flex = "0.12.0"
minijinja = "2.14.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.20.0"
zstd = "0.13.3"

[dependencies.regex-automata]
version = "0.4.13"
default-features = false
features = ["dfa", "hybrid", "meta", "nfa", "perf", "std", "syntax"]

[dependencies.regex-syntax]
version = "0.8.8"
default-features = false
features = ["std"]

[dev-dependencies]
gix = "0.78.0"
libtest-mimic = "0.8.1"
rand = "0.9.2"
serde_yaml = "0.9.34"

[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
panic = "abort"
lto = true
codegen-units = 1
