[package]
name = "svn2git"
version = "0.4.0"
authors = ["Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>"]
edition = "2024"
rust-version = "1.85"
description = "A Subversion-to-Git repository converter"
repository = "https://github.com/eduardosm/svn2git"
license = "MIT OR Apache-2.0"
keywords = ["converter", "git", "repository", "subversion", "svn"]
categories = ["development-tools"]
exclude = ["/.github", "/book", "/ci", ".gitignore"]
publish = true

[[test]]
name = "convert"
path = "convert-tests/main.rs"
harness = false

[dependencies]
bzip2 = { version = "0.6.1", features = ["static"] }
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
cyclic-poly-23 = "0.4.0"
flate2 = "1.1.9"
foldhash = "0.2.0"
gix-actor = "0.40.0"
gix-date = "0.15.0"
gix-features = "0.46.1"
gix-hash = "0.22.1"
gix-object = "0.57.0"
gix-pack = "0.67.0"
indoc = "2.0.7"
liblzma = { version = "0.4.6", features = ["static"] }
lru-mem = "0.3.0"
lz4_flex = "0.12.0"
minijinja = "2.16.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.21.0"
zstd = "0.13.3"

[dependencies.regex-automata]
version = "0.4.14"
default-features = false
features = ["dfa", "hybrid", "meta", "nfa", "perf", "std", "syntax"]

[dependencies.regex-syntax]
version = "0.8.9"
default-features = false
features = ["std"]

[dev-dependencies]
gix = "0.80.0"
libtest-mimic = "0.8.1"
rand = "0.10.0"
serde_yaml = "0.9.34"

[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
panic = "abort"
lto = true
codegen-units = 1
